chrome layout issue fix + slideshow and contact form improvements

--- a/public/css/blocks.css
+++ b/public/css/blocks.css
@@ -1,10 +1,9 @@
 /* general */
 body {
-    margin: 0;
     font-size: 62.5%;
     font-family: Arial, Helvetica, sans-serif;
     background: #000;
-    padding: 20px;
+    margin: 20px;
     color: #333;
 }
 
@@ -126,6 +125,7 @@ a:hover, #numbers span:hover, #numbers span.active {
     font-size: 1.2em;
     line-height: 1.4;
     color: #333;
+    overflow-x: hidden;
 }
 
 #header .name {
@@ -211,8 +211,14 @@ a:hover, #numbers span:hover, #numbers span.active {
     background: #fff;
     margin-bottom: 10px;
     padding: 4px;
+    outline: none;
+}
+
+#form textarea  {
+    padding-left: 8px;
 
 }
+
 #form a {
     margin-right: 4px;
 }
@@ -220,4 +226,8 @@ a:hover, #numbers span:hover, #numbers span.active {
 #confirmation {
     float: right;
     padding-right: 6px;
+}
+
+#reset-form {
+    padding-left: 4px;
 }
